# ChangeLog for dev-lang/perl
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/perl/ChangeLog,v 1.92 2004/11/13 01:04:02 rac Exp $

*perl-5.8.5-r1 (12 Nov 2004)

  12 Nov 2004; Robert Coie <rac@gentoo.org> -perl-5.8.3.ebuild,
  +perl-5.8.5-r1.ebuild:
  Allow the maketest FEATURE to determine whether tests are run. Guide
  Configure to attempt to pick up old 5.8.2 and 5.8.4 directories in @INC

  25 Oct 2004; Michael Cummings <mcummings@gentoo.org> perl-5.8.2-r1.ebuild,
  perl-5.8.3.ebuild, perl-5.8.4-r1.ebuild, perl-5.8.4.ebuild,
  perl-5.8.5.ebuild:
  Cleaner h2ph, should reduce build time but leave us with something still
  usable.

  06 Oct 2004; Guy Martin <gmsoft@gentoo.org> perl-5.8.4-r1.ebuild:
  Stable on hppa.

  28 Sep 2004; Michael Cummings <mcummings@gentoo.org> perl-5.8.2-r1.ebuild,
  perl-5.8.3.ebuild, perl-5.8.4-r1.ebuild, perl-5.8.4.ebuild,
  perl-5.8.5.ebuild:
  Added back perlsuid/sperl based on local use flag. Bug 64823. Users should
  read http://perldoc.com/perl5.8.4/INSTALL.html#suidperl before enabling.

  27 Sep 2004; Mike Frysinger <vapier@gentoo.org> perl-5.8.2-r1.ebuild,
  perl-5.8.3.ebuild, perl-5.8.4-r1.ebuild, perl-5.8.4.ebuild,
  perl-5.8.5.ebuild:
  Add libperl to RDEPEND (since pkg_setup will die otherwise) and make sure
  pkg_setup() respects $ROOT.

  27 Sep 2004; Michael Cummings <mcummings@gentoo.org> perl-5.8.2-r1.ebuild,
  perl-5.8.3.ebuild, perl-5.8.4-r1.ebuild, perl-5.8.4.ebuild,
  perl-5.8.5.ebuild:
  Added perl debugging support, bug 60775

  24 Sep 2004; Robert Coie <rac@gentoo.org> perl-5.8.4-r1.ebuild,
  perl-5.8.5.ebuild:
  Make gdbm patch conditional on having 1.8.3, because libgdbm_compat isn't
  there otherwise, should not affect people who have already built. Made 5.8.5
  depend on 1.8.3 instead. Again, should not affect installed people.

  22 Sep 2004; Robert Coie <rac@gentoo.org> perl-5.8.2-r1.ebuild,